เพิ่ม field สำหรับทำ lab9 - close #190
